# metadata

./: .gitignore  CNAME  README.md  bun.lockb  faq.md  getting-started.md  index.md  pyproject.toml
.vitepress/: config.mts
cli/: database-management.md  debugging.md  extras.md  indexing.md  metadata-handling.md  metadata.md
docs/: METADATA.md
getting-started/: basic-usage.md  installation.md
intro/: getting-started.md  what-is-pizza.md
pizza/: __init__.py  __main__.py  app.py  database.py  fields.py  index.py  multithread.py
pizza/cli/: __main__.py  cache.py
pizza/commands/: add.py  clean.py  index.py  list.py  remove.py  validate.py  version.py  write.py
