[project]
name = "pizzameta"
dynamic = ["version"]
description = "Accurate metadata service for audio files"
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "fastapi>=0.112.1",
    "uvicorn[standard]>=0.30.6",
    "musicbrainzngs>=0.7.1",
    "tinydb>=4.8.0",
    "levenshtein>=0.25.1",
    "click>=8.1.7",
    "mutagen>=1.47.0",
    "requests>=2.32.3",
    "lz4>=4.3.3",
    "lrcup>=0.3.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
pizza = "pizza.cli.__main__:pizza"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "pizza/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pizza"]
