[project]
name = "pizzameta"
dynamic = ["version"]
description = "Accurate metadata handler for audio files"
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "musicbrainzngs>=0.7.1",
    "click>=8.1.7",
    "mutagen>=1.47.0",
    "lrcup>=0.4.3",
    "rich>=13.7.1",
    "orjson>=3.10.7",
    "lz4>=4.3.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
pizza = "pizza.__main__:pizza"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "pizza/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pizza"]
